@@ -17,6 +17,9 @@ DEFAULT_PASSWORD_VALUE=${4}
 MYSQL_PASSWORD_ARG=${5}
 MYSQL_PASSWORD_VALUE=${6}
 
+TOKEN_EXPIRATION_TIME_ARG=${7}
+TOKEN_EXPIRATION_TIME_VALUE=${8}
+
 if [ "$DEFAULT_PASSWORD_ARG" == "-default_pwd" ]; then
     KEYSTONE_ADMIN_PASSWORD=$DEFAULT_PASSWORD_VALUE
 fi
@@ -29,6 +32,12 @@ if [ "$DB_HOST_ARG" == "-dbhost" ]; then
     openstack-config --set /etc/keystone/keystone.conf \
                      database connection mysql://keystone:keystone@$DB_HOST_NAME:$DB_HOST_PORT/keystone;
 
+fi
+
+if [ "$TOKEN_EXPIRATION_TIME_ARG" == "-token_expiration_time" ]; then
+    TOKEN_EXPIRATION_TIME=$TOKEN_EXPIRATION_TIME_VALUE
+    openstack-config --set /etc/keystone/keystone.conf \
+                     token expiration $TOKEN_EXPIRATION_TIME
 fi
 
 /usr/bin/keystone-all &
